# minesweeper_cpp

./: CMakeLists.txt  README.md  build.bat  clean.bat  project.4coder  run.bat
src/: CMakeLists.txt  Game.cpp  Game.h  Logger.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp  resource.h  resource.rc
src/game/: CMakeLists.txt
src/logger/: CMakeLists.txt  Logger.cpp
src/win32_platform/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  win32_platform.cpp
